--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
 config = "0.11"
 serde = "1.0.134"
 clap = { version = "3.0.10", features = ["derive", "cargo"] }
-postgres = "0.19.2"
+tokio-postgres = "0.7.5"
+async-trait = "0.1.52"
