--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
+edition = "2021"
 name = "coolio"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rspotify = { version = "0.11.3", features = ["cli", "client-reqwest"] }
-env_logger = { version = "0.9.0", default-features = false }
-tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
-config = "0.11"
-serde = "1.0.134"
-clap = { version = "3.0.10", features = ["derive", "cargo"] }
-tokio-postgres = "0.7.5"
 async-trait = "0.1.52"
+chrono = "0.4.19"
+clap = {version = "3.0.10", features = ["derive", "cargo"]}
+config = "0.11"
+env_logger = {version = "0.9.0", default-features = false}
+rspotify = {version = "0.11.3", features = ["cli", "client-reqwest"]}
+serde = "1.0.134"
+tokio = {version = "1.11.0", features = ["rt-multi-thread", "macros"]}
+tokio-postgres = {version = "0.7.5", features = ["with-chrono-0_4"]}
