--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ rspotify = {version = "0.11.3", features = ["cli", "client-reqwest"]}
 serde = "1.0.134"
 tokio = {version = "1.11.0", features = ["rt-multi-thread", "macros"]}
 tokio-postgres = {version = "0.7.5", features = ["with-chrono-0_4"]}
+csv = "1.1.6"
