--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = "1.0.134"
 tokio = {version = "1.11.0", features = ["rt-multi-thread", "macros"]}
 tokio-postgres = {version = "0.7.5", features = ["with-chrono-0_4"]}
 csv = "1.1.6"
+enum_dispatch = "0.3.7"
